# g2net-challenge

./: .gitignore  gw_dataset.py  gw_model.py  gw_prepare_cqt.ipynb  gw_preprocess.py  gw_process.py  gw_spectrogram.py  gw_timeseries.py  gw_utils.py  pyproject.toml  readme.md  setup.cfg
deprecated/: signal_processing.ipynb
examples/: gw_create_cqt.ipynb  gw_create_cqt.py  gw_create_cqt_gpu.ipynb  gw_create_cqt_gpu.py  gw_create_dataset.py  gw_create_filtered.ipynb  gw_create_model.py  gw_prepare_cqt.ipynb  gw_prepare_test_dataset.ipynb  gw_prepare_train_dataset.ipynb  gw_test_model.ipynb  gw_train_model.ipynb
src/gwnet/: __init__.py  gw_cqt_gpu.py  gw_dataset.py  gw_device_manager.py  gw_model.py  gw_model_checkpoint_gcs.py  gw_spectrogram.py  gw_timeseries.py  gw_utils.py
test/: test_gw_preprocess.py
