[build-system]
requires = [
    "setuptools>=42",
    "wheel",
#     "h5py>=3.1.0",
#     "keras>=2.6.0",
#     "matplotlib",
#     "numpy>=1.19.5",
#     "Pillow",
#     "PyWavelets",
#     "scaleogram>=0.9.5",
#     "scikit-learn>=0.24.2",
#     "scipy",
#     "tensorflow-gpu>=2.6.0"
]
build-backend = "setuptools.build_meta"