[metadata]
name = gwnet
version = 0.0.1
author = Sunnesoft
author_email = sunnesoft@gmail.com
description = Gravitational Waves preprocessing tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sunnesoft/g2net-challenge
project_urls =
    Bug Tracker = https://github.com/Sunnesoft/g2net-challenge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src