[metadata]
name = gwnet
version = 0.0.1
author = Sunnesoft
author_email = sunnesoft@gmail.com
description = Gravitational Waves preprocessing tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sunnesoft/g2net-challenge
project_urls =
    Bug Tracker = https://github.com/Sunnesoft/g2net-challenge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    h5py >= 3.1.0
    keras >= 2.6.0
    matplotlib
    numpy >= 1.19.5
    Pillow
    PyWavelets
    scaleogram >= 0.9.5
    scikit-learn >= 0.24.2
    scipy
    tensorflow-gpu >= 2.6.0

[options.packages.find]
where = src